[package]
name = "cluuname"
version = "0.1.9"
authors = ["Денис Котляров <#Ulin Project 18, denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluUname.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

description = "Library for displaying information about the system"
keywords = ["uname", "cluuname", "hostname", "clucompany"]
categories = ["development-tools"]

[features]
enable_domainname = []


[dependencies]
libc = "0.2.44"
clucstr = "0.1.6"
