[package]
name = "cluuname"
version = "0.2.8"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluUname.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

description = "Library for displaying information about the system"
keywords = ["uname", "cluuname", "hostname", "clucompany"]
categories = ["development-tools"]

[features]
enable_domainname = []


[dependencies]
libc = "0.2.62"
